--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_modular: ^5.0.3
   flutter_animate: ^4.1.1+1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
