--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_modular: ^5.0.3
   flutter_animate: ^4.1.1+1
   equatable: ^2.0.5
+  dartz: ^0.10.1
+  mocktail: ^0.3.0
 
 dev_dependencies:
   flutter_test:
