--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   mocktail: ^0.3.0
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
