--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dartz: ^0.10.1
   mocktail: ^0.3.0
   flutter_secure_storage: ^8.0.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
