--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.2.19
+  intl: ^0.18.1
 
 flutter_native_splash:
   color: "#FE8622"
