--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.2.19
   intl: ^0.18.1
+  google_fonts: ^4.0.4
 
 flutter_native_splash:
   color: "#FE8622"
